--- a/styles/style.css
+++ b/styles/style.css
@@ -225,7 +225,7 @@ img {
   position: absolute;
   top: -10px;
   left: 243px;
-  z-index: 2;
+  z-index: 3;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -257,7 +257,7 @@ img {
   position: absolute;
   top: 30px;
   left: -60px;
-  z-index: 1;
+  z-index: 2;
   width: 1100px;
   padding-bottom: 51px;
   padding-left: 60px;
@@ -327,6 +327,7 @@ img {
   position: absolute;
   top: -150px;
   left: 140px;
+  z-index: 1;
   width: 1160px;
   margin: 0 auto;
   margin-bottom: 70px;
@@ -339,6 +340,10 @@ img {
 }
 
 .slider-pagination-item {
+  display: none;
+}
+
+.slider-pagination-item-current {
   position: relative;
   display: grid;
   grid-template-columns: 560px 1fr;
@@ -349,12 +354,14 @@ img {
 
 .slider-item-number {
   position: absolute;
-  top: -106px;
-  right: 0;
+  top: -97px;
+  right: 49px;
+  z-index: -1;
   font-size: 180px;
   line-height: 30px;
   font-family: inherit;
   font-weight: 700;
+  color: #ffffff;
 }
 
 .stock-image {
@@ -467,6 +474,7 @@ img {
 .products {
   width: 1160px;
   margin: 0 auto;
+  margin-top: 480px;
   margin-bottom: 172px;
 }
 
