--- a/styles/style.css
+++ b/styles/style.css
@@ -264,27 +264,12 @@ img {
   background-color: #ffe17f;
 }
 
-.popover-closed {
+.catalog-closed .catalog-popover-wrapper,
+.catalog-closed .button-subcatalog-opened {
   display: none;
 }
 
-.popover-closed .button-subcatalog-opened {
-  display: block;
-}
-
-.popover-closed .button-subcatalog-closed {
-  display: none;
-}
-
-.popover-open {
-  display: block;
-}
-
-.popover-open .button-subcatalog-opened {
-  display: none;
-}
-
-.popover-open .button-subcatalog-closed {
+.catalog-open .button-subcatalog-closed {
   display: block;
 }
 
@@ -322,6 +307,8 @@ img {
   position: relative;
   flex-grow: 1;
 }
+
+/*Слайдер*/
 
 .promo-slider {
   position: absolute;
@@ -399,8 +386,8 @@ img {
   grid-column: 2/3;
   grid-row: 1/2;
   margin: 0;
-  margin-top: 121px;
-  margin-bottom: 29px;
+  margin-top: 122px;
+  margin-bottom: 23px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
@@ -412,20 +399,43 @@ img {
   grid-column: 2/3;
   grid-row: 2/3;
   margin: 0;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
 }
 
 .slider-navigation {
+  position: absolute;
+  top: -12px;
+  right: 542px;
   grid-column: 1/3;
   grid-row: 5/6;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  width: 76px;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
+.slider-navigation-item {
+  width: 12px;
+  height: 12px;
+}
+
+.slider-button {
+  display: block;
+  padding: 4px;
+  border: 2px solid #000000;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.slider-button-current {
+  background-color: #000000;
+}
+
 .main-page-button {
+  position: relative;
   text-decoration: none;
   text-align: center;
   font-family: "Raleway", sans-serif;
@@ -434,14 +444,26 @@ img {
   letter-spacing: 3.5px;
   color: #000000;
   background-color: transparent;
+  text-transform: uppercase;
   cursor: pointer;
+}
+
+.main-page-button::before {
+  position: absolute;
+  top: 16px;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 8px;
+  content: "";
+  background-color: #ffe17f;
 }
 
 .slider-description-button {
   grid-column: 2/3;
   grid-row: 3/4;
   width: 220px;
-  margin-bottom: 50px;
+  margin-bottom: 38px;
   padding: 10px 0;
 }
 
@@ -452,7 +474,7 @@ img {
   flex-wrap: wrap;
   column-gap: 20px;
   margin: 0;
-  margin-bottom: 26px;
+  margin-bottom: 38px;
 }
 
 .feauters-wrapper {
@@ -471,6 +493,8 @@ img {
   font-size: 16px;
 }
 
+/*Блок с категориями товаров*/
+
 .products {
   width: 1160px;
   margin: 0 auto;
@@ -480,9 +504,23 @@ img {
 
 .products-list {
   display: flex;
-  margin: 0;
+  column-gap: 40px;
+  width: 1160px;
+  margin: 0 auto;
   padding: 0;
   list-style: none;
+}
+
+.products-item {
+  width: 160px;
+}
+
+.products-item-link {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  line-height: 24px;
+  color: #000000;
+  text-decoration: none;
 }
 
 .advantages {
